# email

./: .install.sh.swn  .install.sh.swp  Email wgts.docx  email.service  inst.sh  install.sh  install.sh~  pre_install.sh  prep.sh  readme  step1_Email.sh  step2_Email.sh  vcon.sh
Source/: author-signature.xml  config.xml  index.html  signature1.xml
Source/.build/.buildbaba5888a3a3bb0c/: .manifest.tmp  index.html  signature1.xml
Source/.build/.buildbaba5888a3a3bb0c/css/user/blue/: navigation.css  settings.css
Source/.build/.buildbaba5888a3a3bb0c/css/user/green/: common.css  phone.css  topbariconsimages.css  user.js
Source/.build/.buildbaba5888a3a3bb0c/js/email/: emailManager.js
Source/css/: style.css
Source/css/car/: car.css  spinner.css
Source/css/car/components/audioPlayer/: audioPlayer.js
Source/css/car/components/bottomPanel/: bottomPanel.js
Source/css/car/components/buttonControls/: buttonControls.js
Source/css/car/components/configuration/: configuration.js
Source/css/car/components/dateTime/: dateTime.css
Source/css/car/components/email/: email.js  emailManager.js
Source/css/car/components/incomingCall/: incomingCall.js
Source/css/car/components/jQuery/: jquery.nouisliderix.js
Source/css/car/components/jsViews/: jsrender.js
Source/css/car/components/keyboard/: keyboard.js
Source/css/car/components/progressBar/: progressBar.js
Source/css/car/components/settings/css/: settings.css
Source/css/car/components/settings/js/: bluetooth.js  themes.js  websocket.js
Source/css/car/components/settings/templates/: template-themes.html
Source/css/car/components/tabs/: tabs.css  tabs.js
Source/css/car/components/topBarIcons/: topBarIcons.js
Source/css/user/blue/: bottombaricons.css  email.css  homescreen.css  library.css  musicplayer.css  nouislider.fox.css  progressBarImg.css  store.css  user.css
Source/css/user/blue/images/email/: Thumbs.db
Source/css/user/blue/images/email_green/: Thumbs.db
Source/css/user/green/: bottombaricons.css  email.css  navigation.css  nouislider.fox.css  store.css  tabs.css  theme.json  user.css
Source/css/user/green/images/Copy of email/: Thumbs.db
Source/css/user/green/images/topbaricons/: Thumbs.db
Source/js/: main.js
Source/js/email/: email.js  emailManager.js
WRT_Plugin_IVI/: wrt-plugins-ivi-0.13.0-2.13.src.rpm
packaging/: Email.spec  wrt-plugins-tizen-email.spec
wgt/: Makefile  config.xml  index.html
wgt/css/: style.css
wgt/css/car/components/email/: email.js  emailManager.js
wgt/css/car/components/jsViews/: template.js
wgt/css/car/components/keyboard/: keyboard.css
wgt/css/car/components/settings/js/: wifi.js
wgt/css/car/components/topBarIcons/: topBarIcons.css
wgt/css/user/blue/: email.css
wgt/css/user/blue/images/email/: Thumbs.db
wgt/css/user/green/: user.css
wgt_src/: .project  author-signature.xml  config.xml  index.html
wgt_src/.build/.buildbaba5888a3a3bb0c/: author-signature.xml  config.xml
wgt_src/.build/.buildbaba5888a3a3bb0c/css/car/: car.js  theme.json
wgt_src/.build/.buildbaba5888a3a3bb0c/css/email/green/: email.css
wgt_src/.build/.buildbaba5888a3a3bb0c/css/user/blue/: bottombaricons.css  common.css  dashboard.css  hvac.css  nouislider.fox.css  phone.css  tabs.css  user.js  (+2 more)
wgt_src/.build/.buildbaba5888a3a3bb0c/js/email/: email.js
wgt_src/css/car/: car.js
wgt_src/css/car/components/alphabetBookmark/: alphabetBookmark.js
wgt_src/css/car/components/boxCaption/: boxCaption.js
wgt_src/css/car/components/dateTime/: dateTime.js
wgt_src/css/email/green/: email.css
wgt_src/css/user/blue/: keyboard.css
wgt_src/css/user/green/: user.css
wrt_plugin/: config.xml
wrt_plugin/pkgconfigs/: wrt-plugins-tizen-email.pc.in
wrt_plugin/src/: Emailplugin.cpp  Emailplugin.h  JSEmailplugin.cpp  JSEmailplugin.h  email_stubs.cpp  email_stubs.h
wrt_plugin_src/: .install.sh.swm  .install.sh.swn  .install.sh.swo  .install.sh.swp  CMakeLists.txt  config.xml  readme  wrt-plugins-tizen-emailplugin.pc  wrt-plugins-tizen-emailplugin.pc.in
wrt_plugin_src/Emailplugin/: CMakeLists.txt  Emailplugin.cpp  Emailplugin.h  Makefile  cmake_install.cmake  email_stubs.cpp  email_stubs.h
wrt_plugin_src/packaging/: wrt-plugins-tizen-email.spec
wrt_plugin_src/pkgconfigs/: wrt-plugins-tizen-email.pc
wrt_plugin_src/src/: Emailplugin.cpp  JSEmailplugin.cpp  JSEmailplugin.h  email_stubs.cpp  plugin_initializer.cpp
(+39 files in other folders)
